# nrf-edgeai-thingy53-ble-remotecontrol

./: .gitignore  README.md  prj.conf
demo/: install.sh  pyproject.toml  requirements.txt  uiapp_ble.py
demo/tests/: Dockerfile  test_install.sh
src/: app_version.h  inference_postprocessing.h  main.c
src/ble/gatt/: ble_gatt.c
