[project]
name = "demo"
version = "0.1.0"
description = "GUI for Neuton Nordic Thingy:53 BLE remote control application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyqt6>=6.10.1",
    "pyserial>=3.5",
]
